# avr-fastled-stub

./: .gitignore  .kdev_include_paths  CMakeLists.txt  LICENCE.md  README.md  avr-fastled-stub.kdev4  main.cpp  rain.kdev4  setup_cmake.sh  toolchain.cmake  upload.sh
FastLED/: power_mgt.cpp
